--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
   <title>Free Online Games – Play Unblocked Games</title>
   <meta name="description" content="Play free online unblocked games online. Action, puzzle, racing games with no download.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+<header>
+  <h1>Browser Games</h1>
+  <p>Play free games online</p>
+</header>
 
-  <h1>Free Online Games</h1>
-  <p>Welcome! Play the best free online games directly in your browser.</p>
+<div class="container">
+  <div class="games">
 
-  <ul>
-    <li><a href="games/tunnel-rush/index.html">Tunnel Rush</a></li>
-    <li><a href="games/slope/index.html">Slope</a></li>
-  </ul>
+    <div class="game-card">
+      <a href="games/tunnel-rush/index.html">Tunnel Rush</a>
+    </div>
+
+    <div class="game-card">
+      <a href="games/slope/index.html">Slope</a>
+    </div>
+
+  </div>
+</div>
 
 </body>
 </html>
-<!-- force rebuild -->
+
