--- a/game/tennis-masters/index.html
+++ b/game/tennis-masters/index.html
@@ -149,8 +149,8 @@
 
 <footer></footer>
 
-<script src="/js/include-header-footer.js"></script>
-<script src="/js/vote.js"></script>
+<script src="/browser-games/js/include-header-footer.js"></script>
+<script src="/browser-games/js/vote.js"></script>
 
 </body>
 </html>
