--- a/game/magikmon/index.html
+++ b/game/magikmon/index.html
@@ -38,10 +38,13 @@
   <span id="dislike-count">0</span>
 </button>
 
-    </div>
    <div class="rating-box">
-  Rating: <span id="rating-value">0</span>/10
+  <div class="rating-score">⭐ <span id="rating-value">0</span> / 10</div>
+  <div class="rating-bar">
+    <div id="rating-fill"></div>
+  </div>
 </div>
+
 
   </div>
 
