--- a/game/longcat/index.html
+++ b/game/longcat/index.html
@@ -221,6 +221,7 @@
 <footer></footer>
 
 <script src="/browser-games/js/include-header-footer.js"></script>
+<script src="/browser-games/js/vote.js"></script>
 
 </body>
 </html>
