--- a/game/longcat/index.html
+++ b/game/longcat/index.html
@@ -219,7 +219,9 @@
 </div>
 
 <footer></footer>
-
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <script src="/browser-games/js/include-header-footer.js"></script>
 <script src="/browser-games/js/vote.js"></script>
 
