--- a/game/magikmon/index.html
+++ b/game/magikmon/index.html
@@ -8,9 +8,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/browser-games/css/gamez.css">
+<link rel="stylesheet" href="/css/gamez.css">
 
-<link rel="stylesheet" href="/browser-games/css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
@@ -223,8 +223,8 @@
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script src="/browser-games/js/include-header-footer.js"></script>
-<script src="/browser-games/js/vote.js"></script>
+<script src="/js/include-header-footer.js"></script>
+<script src="/js/vote.js"></script>
 
 </body>
 </html>
